[gd_scene load_steps=22 format=3 uid="uid://y1yto3cb88nf"]

[ext_resource type="Script" path="res://main/game/player/player.gd" id="1_b7v01"]
[ext_resource type="AudioStream" uid="uid://bagl1ssrrwmjv" path="res://assets/audio/player_damage.mp3" id="2_igtrx"]
[ext_resource type="Texture2D" uid="uid://c4syx46p6o6tx" path="res://assets/sprites/player_shadow.png" id="3_itesb"]
[ext_resource type="AudioStream" uid="uid://dgdbcsyk82dr0" path="res://assets/audio/item_collect.mp3" id="3_mglsa"]
[ext_resource type="Texture2D" uid="uid://hadr0ayxg1g6" path="res://assets/spritesheets/players/monolith.png" id="4_fja7f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6hvnj"]
radius = 9.84886

[sub_resource type="CircleShape2D" id="CircleShape2D_vth8k"]
radius = 21.4994

[sub_resource type="CircleShape2D" id="CircleShape2D_vo6ae"]
radius = 15.0148

[sub_resource type="Animation" id="Animation_5vgkd"]
resource_name = "item_collected"
length = 0.2
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Audio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.409364,
"start_offset": 0.432852,
"stream": ExtResource("3_mglsa")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_hqiwc"]
resource_name = "player_took_damage"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(5, 5, 5, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.135895,
"start_offset": 0.0246089,
"stream": ExtResource("2_igtrx")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_823sp"]
resource_name = "screen_flash"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(2, 2, 2, 0), Color(100, 100, 100, 1), Color(2, 2, 2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k7jlj"]
_data = {
"item_collected": SubResource("Animation_5vgkd"),
"player_took_damage": SubResource("Animation_hqiwc"),
"screen_flash": SubResource("Animation_823sp")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_263oq"]
atlas = ExtResource("4_fja7f")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hrdy"]
atlas = ExtResource("4_fja7f")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrdsn"]
atlas = ExtResource("4_fja7f")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul8ce"]
atlas = ExtResource("4_fja7f")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7o2g"]
atlas = ExtResource("4_fja7f")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqkbr"]
atlas = ExtResource("4_fja7f")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xear4"]
atlas = ExtResource("4_fja7f")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq1t7"]
atlas = ExtResource("4_fja7f")
region = Rect2(224, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gs1bu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_263oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hrdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrdsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul8ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7o2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqkbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xear4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq1t7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["players"]]
y_sort_enabled = true
position = Vector2(0, -49)
scale = Vector2(3, 3)
collision_mask = 2
script = ExtResource("1_b7v01")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="Player_Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6hvnj")

[node name="Pickup_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Pickup_Collision" type="CollisionShape2D" parent="Pickup_Area"]
shape = SubResource("CircleShape2D_vth8k")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Damage_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Damage_Collision" type="CollisionShape2D" parent="Damage_Area"]
shape = SubResource("CircleShape2D_vo6ae")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k7jlj")
}

[node name="Audio" type="AudioStreamPlayer2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, 0)
sprite_frames = SubResource("SpriteFrames_gs1bu")
autoplay = "default"
speed_scale = 1.5

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0.521569)
z_index = -1
position = Vector2(0.166667, 18.3333)
texture = ExtResource("3_itesb")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(2, 2, 2, 0)
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[connection signal="area_entered" from="Pickup_Area" to="." method="_on_pickup_area_area_entered"]
[connection signal="body_entered" from="Damage_Area" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="Damage_Area" to="." method="_on_damage_area_body_exited"]
